--- a/recent.css
+++ b/recent.css
@@ -1,24 +1,24 @@
-/* *{
-  box-sizing: border-box;
-} */
-
+ 
 html{
     width:100%;
     margin: 0;
     padding: 0;
  }
+ body{
+  width: 100%;
+ }
  @media only screen and( width: 414px) {
   body{
-    width: 100%;
+    width: 45%;
      }
-     #number{
-      visibility: collapse;
+     body#number{
+      visibility: hidden;
      }
-     #line{
-      visibility: collapse;
+     body#line{
+      visibility: hidden;
      }
-     #address{
-      visibility: collapse;
+     body#address{
+      visibility: hidden;
      }
      
      .listing{
