--- a/success.css
+++ b/success.css
@@ -5,10 +5,11 @@
 }
 
 body{
-    display: flex;
+    display: flex; 
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
      width: 400px;
      height: 300px;
 
