--- a/edu.css
+++ b/edu.css
@@ -52,16 +52,16 @@ body{
 }
 @media only screen and( width:414px){
    body{ 
-     width: 100%;
-    height: 982px;  
+     width: 40%;
+    height: auto;  
    }  
   #box_edu{
-    /* display:flexbox;
-    flex-direction:column; */
+    display:flex;
+    flex-direction:row; 
     align-items:center;
     justify-content: center;
     top: 43px;
-    width: 45%;
+    width: 15%;
     margin-top:10px; 
     
   }
@@ -75,20 +75,20 @@ body{
     visibility: collapse;
    }
   #box_experience{
-    /* display:flex;
-    flex-direction:column; */
+     display:flex;
+    flex-direction:row; 
     align-items:center;
     justify-content: center;
 
     position: absolute;
     top: 144px;
-    width: 45%;
+    width: 15%;
     padding: 8px 8px 3px; 
     
   }
   #ico{
     bottom: 20px;
-    position:fixed;
+    position:relative;
     float: right;
   }
   #ijambo{
@@ -291,7 +291,7 @@ line-height: 38px;
 
 }
 #box_experience{
-  display: flex-box;
+  display: flex;
   flex-direction: column;
   float: right;
   padding:8px;
